Correct footer spacing and positioning

--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -3,21 +3,51 @@
 .footer {
   background-color: $primaryBlue;
   color: white;
-  padding: 64px 128px;
+  padding: 42px 84px;
+  font-family: "Lato", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
 
-  .org-name {
+  .footer-header {
     font-family: Staatliches;
     letter-spacing: 0.2px;
     font-weight: 500;
     font-size: 24px;
     text-transform: uppercase;
+
+    &.we-serve {
+      font-size: 2.6vw;
+      line-height: 2.8vw;
+      font-weight: 400;
+
+      img {
+        width: 3.2vw;
+      }
+    }
   }
 
-  .we-serve {
-    font-family: Staatliches;
-    letter-spacing: 0.2px;
-    font-weight: 500;
-    font-size: 24px;
-    text-transform: uppercase;
+  .social-icons {
+    a {
+      color: white;
+
+      &:hover {
+        color: $yellowHover;
+      }
+    }
+  }
+
+  .affiliate {
+    position: relative;
+
+    p {
+      position: absolute;
+      top: -1rem;
+      left: -3.6rem;
+    }
+
+    img {
+      width: 13rem;
+      padding-top: 0.6rem;
+    }
   }
 }
